# PhysicsEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Demo.cpp  README.md  imgui.ini
ImGui-SFML/: CMakeLists.txt
Sample/include/: CollisionArenaTest.hpp  Shape.hpp  Test.hpp
Sample/src/: CollisionArenaTest.cpp  Test.cpp
Samples/include/: CollisionArenaTest.hpp  Shape.hpp  Test.hpp  TestMenu.hpp
Samples/src/: CollisionArenaTest.cpp  FallingCirclesTest.cpp  Test.cpp
Tests/: AlgoUnitTests.cpp  CMakeLists.txt  DynamicsWorldUintTests.cpp  GridUnitTests.cpp  PhyscisWorldUnitTests.cpp  RigidObjectTests.cpp  RigidObjectUnitTests.cpp  SolverUnitTests.cpp
pe2d/: CMakeLists.txt
pe2d/headers/: Collider.hpp  Collision.hpp  CollisionPoints.hpp  PhysicsWorld.hpp  RigidObject.hpp  Transform.hpp  Vector2.hpp
pe2d/include/: Algo.hpp  Assert.hpp  BroadPhaseGrid.hpp  Collider.hpp  Collision.hpp  CollisionObject.hpp  CollisionPoints.hpp  CollisionWorld.hpp  DynamicsWorld.hpp  Grid.hpp  Math.hpp  PhysicsWorld.hpp  QuadTree.hpp  QuadTreeContainer.hpp  RigidObject.hpp  Solver.hpp  TaskQueue.hpp  ThreadPool.hpp  Transform.hpp  Utilities.hpp  Vector2.hpp  Worker.hpp
pe2d/src/: Algo.cpp  BroadPhaseGrid.cpp  CircleCollider.cpp  Collider.cpp  Collision.cpp  CollisionObject.cpp  CollisionWorld.cpp  DynamicWorld.cpp  DynamicsWorld.cpp  Grid.cpp  PhysicsWorld.cpp  QuadTree.cpp  RigidObject.cpp  Solver.cpp  SquareCollider.cpp
phy/: Algo.hpp  CircleCollider.hpp  Collider.hpp  Collision.hpp  CollisionPoints.hpp  Object.hpp  PhysicsWorld.hpp  PlaneCollider.hpp  SphereCollider.hpp  SquareCollider.hpp  Transform.hpp  Vector2.hpp
phy/headers/: Algo.hpp  Assert.hpp  CircleCollider.hpp  Collider.hpp  Collision.hpp  CollisionObject.hpp  CollisionPoints.hpp  Object.hpp  PhysicsWorld.hpp  RigidObject.hpp  Solver.hpp  SquareCollider.hpp  Transform.hpp  Vector2.hpp
phy/src/: Algo.cpp  CircleCollider.cpp  Collision.cpp  CollisionObject.cpp  CollisionPoints.cpp  Object.cpp  PhysicsWorld.cpp  RigidObject.cpp  Solver.cpp  SquareCollider.cpp  Transform.cpp  Vector2.cpp
tests/: CMakeLists.txt
tests/include/: CollisionArenaTest.hpp  FallingCirclesTest.hpp  Shape.hpp  Test.hpp  TestCollision.hpp  TestMenu.hpp  TestSAT.hpp
tests/src/: CollisionArenaTest.cpp  FallingCirclesTest.cpp  Test.cpp  TestCollision.cpp  TestSAT.cpp
